--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,18 @@
 {
     "tasks": [
         {
-            "type": "cppbuild",
+            "type": "shell",
             "label": "C/C++: gcc.exe build active file",
-            "command": "C:\\Program Files (x86)\\Dev-Cpp\\MinGW64\\bin\\gcc.exe",
+            "command": "gcc",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
+                "${fileDirname}\\${fileBasenameNoExtension}.exe",
+                "-include",
+                "C:\\sinauC\\week1\\tomi.c",
+                ";",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
             "options": {
