simulasi array pake malloc,plus ngefree memori dan ngertiin kinerja memori di C

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "*.py": "python",
-        "stringlength.C": "cpp"
+        "stringlength.C": "cpp",
+        "utility": "c"
     }
 }
